# ankylosaurus

./: README.md  bootstrap.sh  install.py  pyproject.toml  requirements.txt  splash.py
.github/workflows/: ci.yml  update-index.yml
ankylosaurus/: __init__.py  cli.py  splash.py  tui.py  tui_wizard.py
ankylosaurus/modules/: checker.py  decision.py  detect.py  extensions.py  guide.py  installer.py  models.py  personas.py  questionnaire.py  runner.py  state.py  status.py  uninstaller.py  updater.py
ankylosaurus/modules/rag/: __init__.py  chunker.py  embedder.py  server.py  store.py
data/: model_index.json
modules/: checker.py  decision.py  detect.py  extensions.py  guide.py  installer.py  models.py  personas.py  questionnaire.py  status.py  uninstaller.py  updater.py
scripts/: benchmark_rag.py  build_index.py
tests/: conftest.py  test_checker.py  test_decision.py  test_detect.py  test_extensions.py  test_guide.py  test_installer.py  test_models.py  test_personas.py  test_rag.py  test_splash.py  test_state.py  test_status.py  test_uninstaller.py  test_updater.py
