[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankylosaurus"
dynamic = ["version"]
description = "Automated local LLM setup CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.20.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
rag = [
    "mlx>=0.22.0",
    "lancedb>=0.15.0",
    "pymupdf>=1.25.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "tokenizers>=0.21.0",
    "pyarrow>=14.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
ankylosaurus = "ankylosaurus.cli:app"

[tool.hatch.version]
path = "ankylosaurus/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
